--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
+    <module>maven-starship-plugin</module>
     <module>fiasco</module>
     <module>l4</module>
     <module>openjdk</module>
@@ -27,26 +28,26 @@
       <artifactId>javafx-graphics</artifactId>
       <version>16</version>
     </dependency>
-    <dependency>
-      <groupId>org.starshipos</groupId>
-      <artifactId>starship-maven-plugin</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.starshipos</groupId>-->
+<!--      <artifactId>starship-maven-plugin</artifactId>-->
+<!--      <version>1.0.0-SNAPSHOT</version>-->
+<!--    </dependency>-->
   </dependencies>
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.starshipos</groupId>
-        <artifactId>starship-maven-plugin</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <executions>
-          <execution>
-            <id>build-core</id>
-            <goals><goal>build-core</goal></goals>
-            <phase>compile</phase>
-          </execution>
-        </executions>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>org.starshipos</groupId>-->
+<!--        <artifactId>starship-maven-plugin</artifactId>-->
+<!--        <version>1.0.0-SNAPSHOT</version>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <id>build-core</id>-->
+<!--            <goals><goal>build-core</goal></goals>-->
+<!--            <phase>compile</phase>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
     </plugins>
   </build>
 </project>
