--- a/openjdk/pom.xml
+++ b/openjdk/pom.xml
@@ -12,18 +12,18 @@
   <version>1.0.0-SNAPSHOT</version>
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.starshipos</groupId>
-        <artifactId>starship-maven-plugin</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <executions>
-          <execution>
-            <id>build-core</id>
-            <goals><goal>build-core</goal></goals>
-            <phase>compile</phase>
-          </execution>
-        </executions>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>org.starshipos</groupId>-->
+<!--        <artifactId>starship-maven-plugin</artifactId>-->
+<!--        <version>1.0.0-SNAPSHOT</version>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <id>build-core</id>-->
+<!--            <goals><goal>build-core</goal></goals>-->
+<!--            <phase>compile</phase>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
     </plugins>
   </build>
 </project>
