--- a/fiasco/pom.xml
+++ b/fiasco/pom.xml
@@ -6,24 +6,27 @@
     <groupId>org.starshipos</groupId>
     <artifactId>starship-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
+
   <artifactId>fiasco</artifactId>
+  <packaging>pom</packaging>
+
   <version>1.0.0-SNAPSHOT</version>
+
   <build>
     <plugins>
-<!--      <plugin>-->
-<!--        <groupId>org.starshipos</groupId>-->
-<!--        <artifactId>starship-maven-plugin</artifactId>-->
-<!--        <version>1.0.0-SNAPSHOT</version>-->
-<!--        <executions>-->
-<!--          <execution>-->
-<!--            <id>build-core</id>-->
-<!--            <goals><goal>build-core</goal></goals>-->
-<!--            <phase>compile</phase>-->
-<!--          </execution>-->
-<!--        </executions>-->
-<!--      </plugin>-->
+      <plugin>
+        <groupId>org.starshipos</groupId>
+        <artifactId>maven-starship-plugin</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <executions>
+          <execution>
+            <id>build-core</id>
+            <goals><goal>build-core</goal></goals>
+            <phase>compile</phase>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
