--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -1,16 +1,16 @@
 #Starship Development Updated Properties
-#Sun Apr 27 18:31:08 EDT 2025
-buildFiasco=false
+#Mon Apr 28 17:32:47 EDT 2025
+buildFiasco=true
 buildFiasco.ARM=true
 buildFiasco.x86_64=true
-buildJDK=false
+buildJDK=true
 buildJDK.ARM=true
 buildJDK.x86_64=true
-buildL4=false
+buildL4=true
 buildL4.ARM=true
 buildL4.x86_64=true
 installCodebase=true
 installToolchainFlag=true
 runQEMU=false
-runQEMU.ARM=true
-runQEMU.x86_64=true
+runQEMU.ARM=false
+runQEMU.x86_64=false
