--- a/l4/pom.xml
+++ b/l4/pom.xml
@@ -21,8 +21,10 @@
         <version>1.0.0-SNAPSHOT</version>
         <executions>
           <execution>
-            <id>build-core</id>
-            <goals><goal>build-core</goal></goals>
+            <id>build-l4</id>
+            <goals>
+              <goal>build-l4</goal>
+            </goals>
             <phase>compile</phase>
           </execution>
         </executions>
