Disable JDK and L4 builds in starship-dev.properties
The build flags for JDK and L4 (including ARM and x86_64) were turned off in the development properties file. This may indicate a shift in focus or a need to streamline the build process. Other build and installation flags remain unchanged.

--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -1,14 +1,14 @@
 #Starship Development Updated Properties
-#Mon Apr 28 21:02:36 EDT 2025
+#Tue Apr 29 07:12:38 EDT 2025
 buildFiasco=true
 buildFiasco.ARM=true
 buildFiasco.x86_64=true
-buildJDK=true
-buildJDK.ARM=true
-buildJDK.x86_64=true
-buildL4=true
-buildL4.ARM=true
-buildL4.x86_64=true
+buildJDK=false
+buildJDK.ARM=false
+buildJDK.x86_64=false
+buildL4=false
+buildL4.ARM=false
+buildL4.x86_64=false
 installCodebase=true
 installToolchainFlag=true
 runQEMU=false
