--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -1,16 +1,16 @@
 #Starship Development Updated Properties
-#Tue Apr 29 07:12:38 EDT 2025
+#Tue Apr 29 14:18:48 EDT 2025
 buildFiasco=true
 buildFiasco.ARM=true
-buildFiasco.x86_64=true
+buildFiasco.x86_64=false
 buildJDK=false
 buildJDK.ARM=false
 buildJDK.x86_64=false
 buildL4=false
 buildL4.ARM=false
 buildL4.x86_64=false
-installCodebase=true
-installToolchainFlag=true
+installCodebase=false
+installToolchainFlag=false
 runQEMU=false
 runQEMU.ARM=false
 runQEMU.x86_64=false
