Add starship-config-ui module with configuration UI and tests
Introduces the starship-config-ui module, adding a Swing-based UI for configuring StarshipOS builds. Updates parent POM, project structure, and IDEA configuration to include the new module. Includes unit tests and functionality to parse and save properties and modules to respective files.

--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -1,16 +1,16 @@
-#Starship Development Updated Properties
-#Tue Apr 29 14:18:48 EDT 2025
+#Starship Dev Properties
+#Wed Apr 30 08:49:00 EDT 2025
 buildFiasco=true
 buildFiasco.ARM=true
-buildFiasco.x86_64=false
+buildFiasco.x86=true
 buildJDK=false
 buildJDK.ARM=false
-buildJDK.x86_64=false
+buildJDK.x86=true
 buildL4=false
 buildL4.ARM=false
-buildL4.x86_64=false
-installCodebase=false
-installToolchainFlag=false
+buildL4.x86=true
+initCodebase=false
+installToolchain=false
 runQEMU=false
 runQEMU.ARM=false
-runQEMU.x86_64=false
+runQEMU.x86=true
