Add ConfigUIMojo to execute Starship Configuration UI JAR
Introduce a new Maven Mojo `configure` to invoke the Starship Config JAR during the compile phase. It verifies the presence of the required `.starship` directory and JAR file, and executes the JAR while handling potential errors gracefully. Additionally, update the starship-dev.properties file timestamp and comments.

--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -1,5 +1,5 @@
-#Starship Dev Properties
-#Wed Apr 30 08:49:00 EDT 2025
+#Starship Development Updated Properties
+#Wed Apr 30 09:35:45 EDT 2025
 buildFiasco=true
 buildFiasco.ARM=true
 buildFiasco.x86=true
