Refactor and enhance build and configuration processes.
Introduced plugins for shading, compiling, and automating JAR copying in `pom.xml`. Adjusted method names for better clarity and added a button panel in the UI. Updated properties and commented out unused modules for a streamlined configuration flow.

--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -1,16 +1,16 @@
 #Starship Development Updated Properties
-#Wed Apr 30 09:35:45 EDT 2025
-buildFiasco=true
-buildFiasco.ARM=true
-buildFiasco.x86=true
+#Wed Apr 30 10:49:12 EDT 2025
+buildFiasco=false
+buildFiasco.ARM=false
+buildFiasco.x86=false
 buildJDK=false
 buildJDK.ARM=false
-buildJDK.x86=true
+buildJDK.x86=false
 buildL4=false
 buildL4.ARM=false
-buildL4.x86=true
-initCodebase=false
-installToolchain=false
+buildL4.x86=false
+initCodebase=true
+installToolchain=true
 runQEMU=false
 runQEMU.ARM=false
-runQEMU.x86=true
+runQEMU.x86=false
