--- a/starship-config-ui/pom.xml
+++ b/starship-config-ui/pom.xml
@@ -25,8 +25,10 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
+            <!-- Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -36,6 +38,8 @@
                     <target>21</target>
                 </configuration>
             </plugin>
+
+            <!-- Shade Plugin for Creating Fat JAR -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -48,11 +52,34 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <!-- Specify the application entry point -->
+                                <!-- Specify Entry Point -->
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>org.starship.App</mainClass>
                                 </transformer>
                             </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- Exec Maven Plugin for Copying the JAR -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>copy-jar-to-starship</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>bash</executable>
+                            <arguments>
+                                <argument>-c</argument>
+                                <argument>cp target/starship-config-ui-1.0.0-SNAPSHOT.jar ../.starship/starshipConfig.jar</argument>
+                            </arguments>
                         </configuration>
                     </execution>
                 </executions>
