--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -1,16 +1,16 @@
-#Starship Development Updated Properties
-#Wed Apr 30 12:24:21 EDT 2025
-buildFiasco=false
+#Starship Dev Properties
+#Wed Apr 30 12:36:32 EDT 2025
+buildFiasco=true
 buildFiasco.ARM=false
-buildFiasco.x86=false
-buildJDK=false
+buildFiasco.x86=true
+buildJDK=true
 buildJDK.ARM=false
-buildJDK.x86=false
-buildL4=false
+buildJDK.x86=true
+buildL4=true
 buildL4.ARM=false
-buildL4.x86=false
+buildL4.x86=true
 initCodebase=true
 installToolchain=true
-runQEMU=false
+runQEMU=true
 runQEMU.ARM=false
-runQEMU.x86=false
+runQEMU.x86=true
