Enable additional modules and improve error handling in App.
Uncommented and activated the fiasco, l4, and openjdk modules in `pom.xml` and updated the corresponding properties in `starship-dev.properties`. Improved input validation and error messaging in `App.java` to handle invalid arguments, property file issues, and POM file errors more gracefully.

--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -1,16 +1,16 @@
-#Starship Dev Properties
-#Wed Apr 30 12:36:32 EDT 2025
+#Starship Development Updated Properties
+#Wed Apr 30 13:17:16 EDT 2025
 buildFiasco=true
-buildFiasco.ARM=false
+buildFiasco.ARM=true
 buildFiasco.x86=true
-buildJDK=true
+buildJDK=false
 buildJDK.ARM=false
-buildJDK.x86=true
-buildL4=true
+buildJDK.x86=false
+buildL4=false
 buildL4.ARM=false
-buildL4.x86=true
-initCodebase=true
+buildL4.x86=false
+initCodebase=false
 installToolchain=true
-runQEMU=true
+runQEMU=false
 runQEMU.ARM=false
-runQEMU.x86=true
+runQEMU.x86=false
