--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,9 @@
     <modules>
         <module>maven-starship-plugin</module>
         <module>starship-config-ui</module>
-        <!--<module>fiasco</module>-->
-        <!--<module>l4</module>-->
-        <!--<module>openjdk</module>-->
+        <module>fiasco</module>
+        <module>l4</module>
+        <module>openjdk</module>
     </modules>
                               
 
