Refactor POM and update build properties
Removed unnecessary whitespace in pom.xml for better readability. Updated starship-dev.properties to disable ARM builds for buildFiasco, and modified the timestamp. Also updated the starshipConfig.jar file.

--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -1,7 +1,7 @@
 #Starship Development Updated Properties
-#Wed Apr 30 13:17:16 EDT 2025
+#Thu May 01 10:06:00 EDT 2025
 buildFiasco=true
-buildFiasco.ARM=true
+buildFiasco.ARM=false
 buildFiasco.x86=true
 buildJDK=false
 buildJDK.ARM=false
