Add copyright definition and update build configuration
This commit introduces a copyright configuration file for StarshipOS and updates build properties to reflect changes in platforms and tools. Notable adjustments include enabling L4 and Fiasco builds and refining platform-specific configurations across multiple files.

--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -1,16 +1,16 @@
 #Starship Development Updated Properties
-#Thu May 01 10:06:00 EDT 2025
-buildFiasco=true
-buildFiasco.ARM=false
-buildFiasco.x86=true
+#Thu May 01 10:10:07 EDT 2025
 buildJDK=false
 buildJDK.ARM=false
-buildJDK.x86=false
-buildL4=false
+buildJDK.x86_64=false
+buildL4=true
 buildL4.ARM=false
-buildL4.x86=false
-initCodebase=false
-installToolchain=true
+buildL4.x86_64=true
+installCodebase=true
+installToolchainFlag=true
+buildFiasco=true
+buildFiasco.ARM=false
+buildFiasco.x86_64=true
 runQEMU=false
+runQEMU.x86_64=false
 runQEMU.ARM=false
-runQEMU.x86=false
