--- a/maven-starship-plugin/src/main/resources/starship-dev.properties
+++ b/maven-starship-plugin/src/main/resources/starship-dev.properties
@@ -21,12 +21,14 @@
 buildJDK=false
 buildJDK.ARM=false
 buildJDK.x86_64=false
-buildL4=false
+buildL4=true
 buildL4.ARM=false
-buildL4.x86_64=false
+buildL4.x86_64=true
 installCodebase=true
 installToolchainFlag=true
-buildFiasco=false
+buildFiasco=true
 buildFiasco.ARM=false
-buildFiasco.x86_64=false
+buildFiasco.x86_64=true
 runQEMU=false
+runQEMU.x86_64=false
+runQEMU.ARM=false
