Comment out starship-config-ui module and update build configs.
The starship-config-ui module was removed from the build by commenting it out in the `pom.xml`. Updated `starship-dev.properties` to refine build settings for Fiasco and QEMU, ensuring architecture-specific configurations align. Removed obsolete `starshipConfig.jar`.

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <modules>
         <module>maven-starship-plugin</module>
-        <module>starship-config-ui</module>
+<!--        <module>starship-config-ui</module>-->
         <module>fiasco</module>
         <module>l4</module>
         <module>openjdk</module>
