Refactor and clean up Maven plugin codebase
Renamed "installToolchainFlag" to "installToolchain" for better clarity and consistency. Removed unnecessary fields and parameters flagged as redundant. Updated property files and IDE configurations to align with refactored code and enhance maintainability.

--- a/maven-starship-plugin/src/main/resources/starship-dev.properties
+++ b/maven-starship-plugin/src/main/resources/starship-dev.properties
@@ -18,17 +18,17 @@
 
 #Starship Development Updated Properties
 #Tue Apr 22 13:40:12 EDT 2025
-buildJDK=false
-buildJDK.ARM=false
-buildJDK.x86_64=false
-buildL4=true
-buildL4.ARM=false
-buildL4.x86_64=true
 installCodebase=true
-installToolchainFlag=true
+installToolchain=true
 buildFiasco=true
 buildFiasco.ARM=false
 buildFiasco.x86_64=true
-runQEMU=false
-runQEMU.x86_64=false
+buildL4=true
+buildL4.ARM=false
+buildL4.x86_64=true
+buildJDK=true
+buildJDK.ARM=false
+buildJDK.x86_64=true
+runQEMU=true
+runQEMU.x86_64=true
 runQEMU.ARM=false
