--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -1,16 +1,34 @@
+#
+# Copyright (c) 2025 R. A.  and contributors..
+# /This file is part of StarshipOS, an experimental operating system.
+#
+#  Licensed under the Apache License, Version 2.0 (the "License");
+#  you may not use this file except in compliance with the License.
+#  You may obtain a copy of the License at
+#
+#       https://www.apache.org/licenses/LICENSE-2.0
+#
+#   Unless required by applicable law or agreed to in writing,
+#  software distributed under the License is distributed on an
+#  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
+#  either express or implied. See the License for the specific
+#  language governing permissions and limitations under the License.
+#
+#
+
 #Starship Development Updated Properties
-#Thu May 01 10:25:24 EDT 2025
+#Tue Apr 22 13:40:12 EDT 2025
+installCodebase=true
+installToolchain=true
 buildFiasco=true
 buildFiasco.ARM=false
 buildFiasco.x86_64=true
-buildJDK=false
-buildJDK.ARM=false
-buildJDK.x86_64=false
 buildL4=true
 buildL4.ARM=false
 buildL4.x86_64=true
-installCodebase=true
-installToolchainFlag=true
-runQEMU=false
+buildJDK=true
+buildJDK.ARM=false
+buildJDK.x86_64=true
+runQEMU=true
+runQEMU.x86_64=true
 runQEMU.ARM=false
-runQEMU.x86_64=false
