Refactor JDK build process and update configuration files
Made `buildJDK`, `configure`, `clean`, and `build` methods `final` and added a clean step to JDK build. Updated the build process to use `bash` commands and adjusted directory handling logic. Simplified `.starship-dev.properties` and added new dictionary entries for build-related terms.

--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -17,18 +17,18 @@
 #
 
 #Starship Development Updated Properties
-#Tue Apr 22 13:40:12 EDT 2025
-installCodebase=true
-installToolchain=true
-buildFiasco=true
+#Sat May 03 09:17:00 EDT 2025
+buildFiasco=false
 buildFiasco.ARM=false
-buildFiasco.x86_64=true
-buildL4=true
-buildL4.ARM=false
-buildL4.x86_64=true
+buildFiasco.x86_64=false
 buildJDK=true
 buildJDK.ARM=false
 buildJDK.x86_64=true
-runQEMU=true
-runQEMU.x86_64=true
+buildL4=false
+buildL4.ARM=false
+buildL4.x86_64=false
+installCodebase=true
+installToolchain=true
+runQEMU=false
 runQEMU.ARM=false
+runQEMU.x86_64=false
