Remove starship-config-ui and introduce new ROMFS modules
The obsolete `starship-config-ui` module has been removed, along with its dependencies and associated logic. Introduced new Maven modules `starship-romfs`, `starship-bootstrap`, and `starship-jvm-server` to support building the ROMFS layout and enhancing modularity. Updated the build system (e.g., `project.mk`, `pom.xml`) to reflect these changes and ensure seamless integration.

--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -17,16 +17,16 @@
 #
 
 #Starship Development Updated Properties
-#Sat May 03 09:17:00 EDT 2025
-buildFiasco=false
+#Sun May 04 17:24:13 EDT 2025
+buildFiasco=true
 buildFiasco.ARM=false
-buildFiasco.x86_64=false
+buildFiasco.x86_64=true
 buildJDK=true
 buildJDK.ARM=false
 buildJDK.x86_64=true
-buildL4=false
+buildL4=true
 buildL4.ARM=false
-buildL4.x86_64=false
+buildL4.x86_64=true
 installCodebase=true
 installToolchain=true
 runQEMU=false
