Remove ConfigUIMojo and integrate JVM server updates
Deleted `ConfigUIMojo` plugin and cleaned up related properties and inspections. Introduced updated JVM server implementation and build configuration for modular integration. Added build scripts, standardized annotations, and adjusted project modules for streamlined packaging of Fiasco components.

--- a/l4/pkg/jvm_server/Makefile
+++ b/l4/pkg/jvm_server/Makefile
@@ -1,4 +1,7 @@
-TARGET = jvm_server
-SRC_CXX = jvm_server.cc
-PKG_CONFIG = l4re-util
-REQUIRES_LIBS = cxx
+PKGDIR := $(dir $(lastword $(MAKEFILE_LIST)))
+L4DIR  ?= $(PKGDIR)/../..
+
+TARGET := jvm_server
+SRC_CC := jvm_server.cc
+
+include $(L4DIR)/mk/prog.mk
