--- a/fiasco/pom.xml
+++ b/fiasco/pom.xml
@@ -33,6 +33,26 @@
 
   <build>
     <plugins>
+      <!--      <plugin>-->
+      <!--        <groupId>org.apache.maven.plugins</groupId>-->
+      <!--        <artifactId>maven-antrun-plugin</artifactId>-->
+      <!--        <version>3.1.0</version>-->
+      <!--        <executions>-->
+      <!--          <execution>-->
+      <!--            <id>package-fiasco</id>-->
+      <!--            <phase>package</phase>-->
+      <!--            <goals>-->
+      <!--              <goal>run</goal>-->
+      <!--            </goals>-->
+      <!--            <configuration>-->
+      <!--              <tasks>-->
+      <!--                <property name="project.version" value="${project.version}" />-->
+      <!--                <ant antfile="build.xml" target="package" />-->
+      <!--              </tasks>-->
+      <!--            </configuration>-->
+      <!--          </execution>-->
+      <!--        </executions>-->
+      <!--      </plugin>-->
       <plugin>
         <groupId>org.starshipos</groupId>
         <artifactId>maven-starship-plugin</artifactId>
