--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -18,16 +18,16 @@
 
 #Starship Development Updated Properties
 #Mon May 05 12:20:41 EDT 2025
-buildFiasco=true
+buildFiasco=false
 buildFiasco.ARM=false
-buildFiasco.x86_64=true
-buildJDK=true
+buildFiasco.x86_64=false
+buildJDK=false
 buildJDK.ARM=false
-buildJDK.x86_64=true
-buildL4=true
+buildJDK.x86_64=false
+buildL4=false
 buildL4.ARM=false
-buildL4.x86_64=true
-installCodebase=true
+buildL4.x86_64=false
+installCodebase=false
 installToolchain=true
 runQEMU=false
 runQEMU.ARM=false
