Disable build flags and update build configurations
All build-related flags in `starship-dev.properties` were set to false, disabling builds and installations across architectures. Additional changes include swapping JDK debug level to `fastdebug`, updating Maven plugins, and commenting out the `starship-romfs` module. IntelliJ workspace settings and a `README.md` file were also added to aid development setup and configuration.

--- a/maven-starship-plugin/src/main/resources/starship-dev.properties
+++ b/maven-starship-plugin/src/main/resources/starship-dev.properties
@@ -18,17 +18,21 @@
 
 #Starship Development Updated Properties
 #Tue Apr 22 13:40:12 EDT 2025
-installCodebase=true
-installToolchain=true
+installCodebase=false
+installToolchain=false
+# FiascoOC
 buildFiasco=true
 buildFiasco.ARM=false
 buildFiasco.x86_64=true
-buildL4=true
+# L4Re
+buildL4=false
 buildL4.ARM=false
-buildL4.x86_64=true
-buildJDK=true
+buildL4.x86_64=false
+# OpenJDK
+buildJDK=false
 buildJDK.ARM=false
-buildJDK.x86_64=true
-runQEMU=true
-runQEMU.x86_64=true
+buildJDK.x86_64=false
+# QEMU - RUN
+runQEMU=false
+runQEMU.x86_64=false
 runQEMU.ARM=false
