--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <module>openjdk</module>
         <module>starship-bootstrap</module>
         <module>starship-jvm-server</module>
-        <module>starship-romfs</module>
+<!--        <module>starship-romfs</module> -->
     </modules>
 
 </project>
