--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -17,18 +17,18 @@
 #
 
 #Starship Development Updated Properties
-#Mon May 05 12:20:41 EDT 2025
-buildFiasco=false
+#Thu May 08 15:26:42 EDT 2025
+buildFiasco=true
 buildFiasco.ARM=false
-buildFiasco.x86_64=false
+buildFiasco.x86_64=true
 buildJDK=false
 buildJDK.ARM=false
 buildJDK.x86_64=false
-buildL4=false
+buildL4=true
 buildL4.ARM=false
-buildL4.x86_64=false
+buildL4.x86_64=true
 installCodebase=false
-installToolchain=true
+installToolchain=false
 runQEMU=false
 runQEMU.ARM=false
 runQEMU.x86_64=false
