--- a/fiasco/pom.xml
+++ b/fiasco/pom.xml
@@ -33,26 +33,6 @@
 
   <build>
     <plugins>
-      <!--      <plugin>-->
-      <!--        <groupId>org.apache.maven.plugins</groupId>-->
-      <!--        <artifactId>maven-antrun-plugin</artifactId>-->
-      <!--        <version>3.1.0</version>-->
-      <!--        <executions>-->
-      <!--          <execution>-->
-      <!--            <id>package-fiasco</id>-->
-      <!--            <phase>package</phase>-->
-      <!--            <goals>-->
-      <!--              <goal>run</goal>-->
-      <!--            </goals>-->
-      <!--            <configuration>-->
-      <!--              <tasks>-->
-      <!--                <property name="project.version" value="${project.version}" />-->
-      <!--                <ant antfile="build.xml" target="package" />-->
-      <!--              </tasks>-->
-      <!--            </configuration>-->
-      <!--          </execution>-->
-      <!--        </executions>-->
-      <!--      </plugin>-->
       <plugin>
         <groupId>org.starshipos</groupId>
         <artifactId>maven-starship-plugin</artifactId>
@@ -66,6 +46,17 @@
             <phase>compile</phase>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>build</directory>
+            </fileset>
+          </filesets>
+        </configuration>
       </plugin>
     </plugins>
   </build>
