Add Maven Wrapper and update build configurations
Integrated Maven Wrapper for consistent builds and added relevant configuration files. Updated Pom.xml to include Maven Wrapper plugin, disabled build flags, commented out the `starship-romfs` module, and adjusted IntelliJ workspace settings to improve developer experience.

--- a/pom.xml
+++ b/pom.xml
@@ -35,4 +35,17 @@
 <!--        <module>starship-romfs</module> -->
     </modules>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-wrapper-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <mavenVersion>3.9.6</mavenVersion>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
