--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -19,14 +19,14 @@
 #Starship Development Updated Properties
 #Thu May 08 15:26:42 EDT 2025
 buildFiasco=true
-buildFiasco.ARM=false
+buildFiasco.ARM=true
 buildFiasco.x86_64=true
-buildJDK=false
-buildJDK.ARM=false
-buildJDK.x86_64=false
 buildL4=true
-buildL4.ARM=false
+buildL4.ARM=true
 buildL4.x86_64=true
+buildJDK=true
+buildJDK.ARM=true
+buildJDK.x86_64=true
 installCodebase=false
 installToolchain=false
 runQEMU=false
