--- a/maven-starship-plugin/src/main/resources/starship-dev.properties
+++ b/maven-starship-plugin/src/main/resources/starship-dev.properties
@@ -17,22 +17,18 @@
 #
 
 #Starship Development Updated Properties
-#Tue Apr 22 13:40:12 EDT 2025
+#Thu May 08 15:26:42 EDT 2025
+buildFiasco=true
+buildFiasco.ARM=true
+buildFiasco.x86_64=true
+buildL4=true
+buildL4.ARM=true
+buildL4.x86_64=true
+buildJDK=true
+buildJDK.ARM=true
+buildJDK.x86_64=true
 installCodebase=false
 installToolchain=false
-# FiascoOC
-buildFiasco=true
-buildFiasco.ARM=false
-buildFiasco.x86_64=true
-# L4Re
-buildL4=false
-buildL4.ARM=false
-buildL4.x86_64=false
-# OpenJDK
-buildJDK=false
-buildJDK.ARM=false
-buildJDK.x86_64=false
-# QEMU - RUN
 runQEMU=false
-runQEMU.x86_64=false
 runQEMU.ARM=false
+runQEMU.x86_64=false
