Disable build flags and add IntelliJ configuration files
All build-related flags in `starship-dev.properties` were turned off to disable builds and installations across architectures. IntelliJ workspace and module configuration files were added to version control for better IDE integration. Minor updates were made to the `README.md` and dependency list to reflect required packages.

--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -17,16 +17,16 @@
 #
 
 #Starship Development Updated Properties
-#Thu May 08 15:26:42 EDT 2025
-buildFiasco=true
-buildFiasco.ARM=true
-buildFiasco.x86_64=true
-buildL4=true
-buildL4.ARM=true
-buildL4.x86_64=true
+#Tue May 13 08:17:58 EDT 2025
+buildFiasco=false
+buildFiasco.ARM=false
+buildFiasco.x86_64=false
 buildJDK=true
-buildJDK.ARM=true
+buildJDK.ARM=false
 buildJDK.x86_64=true
+buildL4=false
+buildL4.ARM=false
+buildL4.x86_64=false
 installCodebase=false
 installToolchain=false
 runQEMU=false
