--- a/maven-starship-plugin/src/main/resources/starship-dev.properties
+++ b/maven-starship-plugin/src/main/resources/starship-dev.properties
@@ -21,12 +21,15 @@
 buildFiasco=true
 buildFiasco.ARM=true
 buildFiasco.x86_64=true
-buildL4=true
-buildL4.ARM=true
-buildL4.x86_64=true
+cleanFiasco=true
 buildJDK=true
 buildJDK.ARM=true
 buildJDK.x86_64=true
+cleanJDK=true
+buildL4=true
+buildL4.ARM=true
+buildL4.x86_64=true
+cleanL4=true
 installCodebase=false
 installToolchain=false
 runQEMU=false
