--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -17,16 +17,19 @@
 #
 
 #Starship Development Updated Properties
-#Tue May 13 08:17:58 EDT 2025
-buildFiasco=false
-buildFiasco.ARM=false
-buildFiasco.x86_64=false
+#Tue May 13 11:56:38 EDT 2025
+buildFiasco=true
+buildFiasco.ARM=true
+buildFiasco.x86_64=true
 buildJDK=true
-buildJDK.ARM=false
+buildJDK.ARM=true
 buildJDK.x86_64=true
-buildL4=false
-buildL4.ARM=false
-buildL4.x86_64=false
+buildL4=true
+buildL4.ARM=true
+buildL4.x86_64=true
+cleanFiasco=true
+cleanJDK=true
+cleanL4=true
 installCodebase=false
 installToolchain=false
 runQEMU=false
