Add targeted build warnings and simplify clean flag handling
Added prominent warnings during build execution to improve visibility for JDK, Fiasco, and L4 modules. Removed unnecessary boolean parameter from `setCleanFlag` for streamlined usage. Updated IntelliJ configurations and disabled build flags in `starship-dev.properties` for focused development setups.

--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -17,16 +17,16 @@
 #
 
 #Starship Development Updated Properties
-#Tue May 13 11:56:38 EDT 2025
+#Tue May 13 15:22:15 EDT 2025
 buildFiasco=true
 buildFiasco.ARM=true
-buildFiasco.x86_64=true
+buildFiasco.x86_64=false
 buildJDK=true
 buildJDK.ARM=true
-buildJDK.x86_64=true
+buildJDK.x86_64=false
 buildL4=true
 buildL4.ARM=true
-buildL4.x86_64=true
+buildL4.x86_64=false
 cleanFiasco=true
 cleanJDK=true
 cleanL4=true
