Disable ARM builds and add targeted build warnings.
ARM builds for JDK, Fiasco, and L4 have been disabled due to the lack of cross-compilation support. Added prominent warnings during build execution to notify users of this limitation. Updated `starship-dev.properties`, modified build logic, and included new IntelliJ configurations.

--- a/maven-starship-plugin/src/main/resources/starship-dev.properties
+++ b/maven-starship-plugin/src/main/resources/starship-dev.properties
@@ -17,18 +17,18 @@
 #
 
 #Starship Development Updated Properties
-#Thu May 08 15:26:42 EDT 2025
+#Tue May 13 22:36:23 EDT 2025
 buildFiasco=true
-buildFiasco.ARM=true
+buildFiasco.ARM=false
 buildFiasco.x86_64=true
-cleanFiasco=true
 buildJDK=true
-buildJDK.ARM=true
+buildJDK.ARM=false
 buildJDK.x86_64=true
-cleanJDK=true
 buildL4=true
-buildL4.ARM=true
+buildL4.ARM=false
 buildL4.x86_64=true
+cleanFiasco=true
+cleanJDK=true
 cleanL4=true
 installCodebase=false
 installToolchain=false
