--- a/.starship/starship-dev.properties
+++ b/.starship/starship-dev.properties
@@ -17,16 +17,16 @@
 #
 
 #Starship Development Updated Properties
-#Tue May 13 15:22:15 EDT 2025
+#Tue May 13 23:27:53 EDT 2025
 buildFiasco=true
-buildFiasco.ARM=true
-buildFiasco.x86_64=false
+buildFiasco.ARM=false
+buildFiasco.x86_64=true
 buildJDK=true
-buildJDK.ARM=true
-buildJDK.x86_64=false
+buildJDK.ARM=false
+buildJDK.x86_64=true
 buildL4=true
-buildL4.ARM=true
-buildL4.x86_64=false
+buildL4.ARM=false
+buildL4.x86_64=true
 cleanFiasco=true
 cleanJDK=true
 cleanL4=true
