--- a/l4/pkg/jvm_server/Makefile
+++ b/l4/pkg/jvm_server/Makefile
@@ -1,7 +1,4 @@
-PKGDIR := $(dir $(lastword $(MAKEFILE_LIST)))
-L4DIR  ?= $(PKGDIR)/../..
+PKGDIR	= .
+L4DIR	?= $(PKGDIR)/../..
 
-TARGET := jvm_server
-SRC_CC := jvm_server.cc
-
-include $(L4DIR)/mk/prog.mk
+include $(L4DIR)/mk/subdir.mk
