Remove OpenJDK module (temporary) and refine build configuration.
The OpenJDK module and related configurations were removed from the project. Protected access modifiers were replaced with public in `AbstractStarshipMojo`. Added support for copying the Fiasco kernel in `BuildL4Util`. Included a new L4 JVM server configuration and updated IntelliJ IDEA project files.

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <module>maven-starship-plugin</module>
         <module>fiasco</module>
         <module>l4</module>
-        <module>openjdk</module>
+        <!--        <module>openjdk</module>-->
 <!--        <module>starship-bootstrap</module>-->
 <!--        <module>starship-jvm-server</module>-->
 <!--        <module>starship-romfs</module> -->
