--- a/pom.xml
+++ b/pom.xml
@@ -20,19 +20,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.starshipos</groupId>
+    <groupId>org.starship</groupId>
     <artifactId>starship-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
-        <module>maven-starship-plugin</module>
+        <module>starship-maven-plugin</module>
+        <module>openjdk</module>
         <module>fiasco</module>
-        <module>l4</module>
-        <!--        <module>openjdk</module>-->
-<!--        <module>starship-bootstrap</module>-->
-<!--        <module>starship-jvm-server</module>-->
-<!--        <module>starship-romfs</module> -->
+        <module>starship-romfs</module>
+        <!--<module>starship-bootstrap</module>-->
+        <!--<module>starship-jvm-server</module>-->
+        <!-- Always build after ROMFS is populated -->
+        <!--<module>l4</module>-->
     </modules>
 
 
