--- a/starship-bootstrap/pom.xml
+++ b/starship-bootstrap/pom.xml
@@ -20,7 +20,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.starshipos</groupId>
+        <groupId>org.starship</groupId>
         <artifactId>starship-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -45,4 +45,11 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+
+        </plugins>
+    </build>
 </project>
+
