--- a/l4/build.xml
+++ b/l4/build.xml
@@ -18,14 +18,19 @@
 
 <project name="StarshipROMFS" default="default" basedir=".">
 
-    <target name="default" depends="copy-jdk"/>
+    <target name="default" depends="copy-jdk,copy-fiasco"/>
+
+    <target name="copy-fiasco">
+        <mkdir dir="build/kernel"/>
+        <copy file="target/fiasco-extracted/build/x86_64/fiasco"
+              tofile="build/kernel/fiasco"/>
+    </target>
+
 
     <target name="copy-jdk">
-        <echo>Copy JDK to romfs</echo>
-        <mkdir dir="target/l4-pkg-romfs"/>
-        <copy todir="target/l4-pkg-romfs" overwrite="true">
+        <mkdir dir="l4/pkg/romfs/java"/>
+        <copy todir="l4/pkg/romfs/java" overwrite="true">
             <fileset dir="target/jdk"/>
         </copy>
     </target>
-
 </project>
