--- a/l4/pom.xml
+++ b/l4/pom.xml
@@ -21,7 +21,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.starshipos</groupId>
+    <groupId>org.starship</groupId>
     <artifactId>starship-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
@@ -30,11 +30,65 @@
   <packaging>pom</packaging>
   <version>1.0.0-SNAPSHOT</version>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.starship</groupId>
+      <artifactId>jdk.tar.gz</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <classifier>x86_64</classifier>
+      <type>tar.gz</type>
+      <scope>runtime</scope>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
       <plugin>
-        <groupId>org.starshipos</groupId>
-        <artifactId>maven-starship-plugin</artifactId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.6.0</version>
+        <executions>
+          <execution>
+            <id>unpack-jdk-runtime</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>unpack</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.starship</groupId>
+                  <artifactId>jdk.tar.gz</artifactId>
+                  <version>1.0.0-SNAPSHOT</version>
+                  <classifier>x86_64</classifier>
+                  <type>tar.gz</type>
+                  <outputDirectory>${project.build.directory}/jdk</outputDirectory>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <id>copy-jdk-to-romfs</id>
+            <phase>process-resources</phase>
+            <configuration>
+              <tasks>
+                <ant antfile="build.xml" target="copy-jdk"/>
+              </tasks>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.starship</groupId>
+        <artifactId>starship-maven-plugin</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <executions>
           <execution>
