--- a/starship-maven-plugin/pom.xml
+++ b/starship-maven-plugin/pom.xml
@@ -22,12 +22,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.starshipos</groupId>
+        <groupId>org.starship</groupId>
         <artifactId>starship-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>maven-starship-plugin</artifactId>
+    <artifactId>starship-maven-plugin</artifactId>
 
     <packaging>maven-plugin</packaging>
 
@@ -70,7 +70,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.13.1</version>
+                <version>3.13.1</version> <!-- THIS FIXES IT -->
                 <executions>
                     <execution>
                         <id>default-descriptor</id>
